--- a/index.html
+++ b/index.html
@@ -4,6 +4,40 @@
 </HEAD>
 <BODY>
     Hello World!
+    <h1>About Me <i>(Cameron Nicholson)</i></h1>
+    <p>I graduated from <font size = "6"> 
+        <font color = "red"> N </font> 
+        R
+        <font color = "red"> H </font> 
+        E
+        <font color = "red"> G </font> </font> High school</p>
+        <p> I now attend 
+            <font color = "purple" size = "6"> Winona State University </font>
+            as a Data Science Major and a Statistics Minor</P>
+        <p> Here are some things I like</p>
+        <ul>
+            <li>Spending time with friends</li>
+            <li>Playing Video Games</li>
+            <li>Pandas</li>
+            <img src="./img/panda.png"/>
+            <li>Watching Youtube</li>
+            <a href="https://www.youtube.com/">Youtube</a>
+        </ul>
+
+        <table border = "10">
+            <tr>
+                <th>Jobs I have had</th>
+                <th>Age</th>
+            </tr>
+            <tr>
+                <td>Walmart (OGP)</td>
+                <td>17-18</td>
+            </tr>
+            <tr>
+                <td>Doordash</td>
+                <td>19-now</td>
+            </tr>
+        </table>
 </BODY>
 </HTML>
 
